# angrymetalguy-to-spotify

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run.py
angrymetalguy_to_spotify/: configuration.py  constants.py
angrymetalguy_to_spotify/scraper/: constants.py  links.py  review.py  utils.py
angrymetalguy_to_spotify/spotify/: manager.py  playlist.py
angrymetalguy_to_spotify/utils/: logger.py
